--- a/Portifolio.html
+++ b/Portifolio.html
@@ -24,7 +24,7 @@
                     <!-- CAIXA FOTO DE PERFÍL -->
                     <div class="coluna coluna-esquerda">
                         <figure>
-                            <img src="Assets/MC-Poze2.jpg" alt="Hudson Carolino">
+                            <img src="../Assets/lucas.jpg" alt="Lucas Fernandes">
                             <figcaption class="hidden">Lucas Fernandes</figcaption>
                         </figure>
                     </div>
@@ -72,6 +72,7 @@
                             <ul>
                                 <li>HTML 5</li>
                                 <li>CSS 3</li>
+                                <li>Java Script</li>
                                 <li>Python</li>
                             </ul>
                         </section>
@@ -80,6 +81,7 @@
                             <h2>Cursos</h2>
                             <ul>
                                 <li>Desenvolvimento de Sistemas - ETE</li>
+                                <li>HTML Web Developer - DIO</li>
                             </ul>
                         </section>
 
@@ -139,31 +141,31 @@
                     <ul class="redes-sociais">
                         <li>
                             <a href="#">
-                                <img src="./assets/img/linkedin.svg" alt="Linkedin">
+                                <img src="../assets/174857.png" alt="Linkedin">
                                 <p>Linkedin</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./assets/img/github-big-logo.svg" alt="Github">
+                                <img src="../Assets/github.png" alt="Github">
                                 <p>Github</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./assets/img/instagram.svg" alt="Instagram">
+                                <img src="../assets/2227-removebg-preview.png" alt="Instagram">
                                 <p>Instagram</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./assets/img/youtube.svg" alt="Youtube">
+                                <img src="../assets/download-removebg-preview.png" alt="Youtube">
                                 <p>Youtube</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./assets/img/facebook-app-symbol.svg" alt="Facebook">
+                                <img src="../assets/facebook-removebg-preview.png" alt="Facebook">
                                 <p>Facebook</p>
                             </a>
                         </li>
